--- a/packages/instant-apps-components-react/package.json
+++ b/packages/instant-apps-components-react/package.json
@@ -17,6 +17,8 @@
     "dist/"
   ],
   "devDependencies": {
+    "@esri/calcite-components": "1.0.7",
+    "@types/arcgis-js-api": "^4.26.0",
     "@types/node": "~15.12.1",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
