--- a/package.json
+++ b/package.json
@@ -1,12 +1,109 @@
 {
-  "name": "root",
+  "name": "@esri/instant-apps",
+  "version": "0.0.0",
   "private": true,
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "build": "turbo run build",
+    "clean": "turbo run clean && rimraf node_modules",
+    "lint": "turbo run lint",
+    "publish:next": "lerna publish from-package --dist-tag next --yes",
+    "publish:latest": "lerna publish from-package --yes",
+    "version:next": "lerna version --conventional-prerelease --preid next --no-git-tag-version --no-push --yes && npm run util:sync-linked-package-versions",
+    "version:latest": "lerna version --conventional-commits --create-release github --no-git-tag-version --no-push --yes && npm run util:sync-linked-package-versions",
+    "prepare": "husky install",
+    "preversion": "npm run util:is-in-sync-with-origin && npm run util:is-working-tree-clean",
+    "test": "turbo run test",
+    "util:is-in-sync-with-origin": "[ \"$(git rev-parse --abbrev-ref HEAD)\" = \"master\" ] && [ \"$(git rev-parse master)\" = \"$(git rev-parse origin/master)\" ]",
+    "util:is-next-deployable": "ts-node --esm support/isNextDeployable.ts",
+    "util:is-working-tree-clean": "[ -z \"$(git status --porcelain=v1)\" ]",
+    "util:push-tags": "git push origin master --follow-tags",
+    "util:remove-next-changelog-entries": "ts-node --esm support/removeNextChangelogEntries.ts",
+    "util:sync-linked-package-versions": "ts-node --esm support/syncLinkedPackageVersions.ts"
+  },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "lerna": "^6.6.1",
-    "typescript": "4.7.4"
+    "@babel/preset-react": "7.18.6",
+    "@storybook/addon-a11y": "6.5.16",
+    "@storybook/addon-docs": "6.5.15",
+    "@storybook/addon-interactions": "6.5.16",
+    "@storybook/addon-knobs": "6.4.0",
+    "@storybook/html": "6.5.15",
+    "@storybook/storybook-deployer": "2.8.16",
+    "@storybook/testing-library": "0.0.13",
+    "@types/dedent": "0.7.0",
+    "@types/jest": "27.0.3",
+    "@types/jest-axe": "3.5.5",
+    "@types/lodash-es": "4.17.7",
+    "@types/node": "20.2.3",
+    "@types/react": "^16.7.6",
+    "@types/react-dom": "^16.0.9",
+    "@types/semver": "7.3.13",
+    "@types/shell-quote": "1.7.1",
+    "@types/sortablejs": "1.15.1",
+    "@types/yargs": "17.0.24",
+    "@typescript-eslint/eslint-plugin": "5.59.5",
+    "@typescript-eslint/parser": "5.48.2",
+    "@whitespace/storybook-addon-html": "5.0.0",
+    "autoprefixer": "10.4.13",
+    "axe-core": "4.6.3",
+    "babel-loader": "8.3.0",
+    "cheerio": "1.0.0-rc.10",
+    "chokidar": "3.5.3",
+    "chromatic": "6.19.5",
+    "concurrently": "7.6.0",
+    "conventional-changelog-conventionalcommits": "5.0.0",
+    "cpy": "10.0.0",
+    "cpy-cli": "4.2.0",
+    "dedent": "0.7.0",
+    "eslint": "8.43.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jest": "27.2.1",
+    "eslint-plugin-jsdoc": "46.2.6",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-unicorn": "46.0.0",
+    "husky": "8.0.3",
+    "jest": "27.4.5",
+    "jest-axe": "7.0.1",
+    "jest-cli": "27.4.5",
+    "lerna": "6.6.1",
+    "lint-staged": "13.2.2",
+    "markdownlint-cli": "0.34.0",
+    "postcss": "8.4.21",
+    "prettier": "2.8.4",
+    "puppeteer": "10.0.0",
+    "quicktype-core": "23.0.12",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "rimraf": "4.1.2",
+    "semver": "7.3.8",
+    "shell-quote": "1.8.1",
+    "stencil-eslint-core": "0.3.1",
+    "storybook": "6.5.16",
+    "storybook-addon-themes": "6.1.0",
+    "storybook-rtl-addon": "0.3.3",
+    "stylelint": "14.16.1",
+    "stylelint-config-recommended-scss": "8.0.0",
+    "stylelint-use-logical-spec": "5.0.0",
+    "tailwindcss": "3.3.2",
+    "ts-jest": "27.1.5",
+    "ts-node": "10.9.1",
+    "turbo": "1.10.1",
+    "type-fest": "3.11.1",
+    "typescript": "4.9.5",
+    "updtr": "4.0.0",
+    "workbox-build": "7.0.0",
+    "yargs": "17.7.2"
+  },
+  "license": "SEE LICENSE.md",
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "packageManager": "npm@8.19.4",
+  "volta": {
+    "node": "16.20.0"
   }
 }
