feat: Language switcher UI updates

--- a/packages/instant-apps-components/.prettierrc
+++ b/packages/instant-apps-components/.prettierrc
@@ -1,13 +1,15 @@
 {
-    "arrowParens": "avoid",
-    "bracketSpacing": true,
-    "jsxBracketSameLine": false,
-    "jsxSingleQuote": false,
-    "quoteProps": "consistent",
-    "printWidth": 180,
-    "semi": true,
-    "singleQuote": true,
-    "tabWidth": 2,
-    "trailingComma": "all",
-    "useTabs": false
+  "jsonRecursiveSort": true,
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "jsxSingleQuote": false,
+  "plugins": ["prettier-plugin-sort-json"],
+  "printWidth": 180,
+  "quoteProps": "consistent",
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": false
 }
