--- a/.prettierrc
+++ b/.prettierrc
@@ -1,19 +1,15 @@
 {
-    "arrowParens": "always",
-    "bracketSameLine": false,
-    "bracketSpacing": true,
-    "printWidth": 120,
-    "semi": true,
-    "singleQuote": false,
-    "tabWidth": 2,
-    "trailingComma": "none",
-    "useTabs": false,
-    "overrides": [
-        {
-            "files": "*.tsx",
-            "options": {
-                "printWidth": 100
-            }
-        }
-    ]
+  "jsonRecursiveSort": true,
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "jsxSingleQuote": false,
+  "plugins": ["prettier-plugin-sort-json"],
+  "printWidth": 180,
+  "quoteProps": "consistent",
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": false
 }
