--- a/packages/instant-apps-components/package.json
+++ b/packages/instant-apps-components/package.json
@@ -58,6 +58,7 @@
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
     "lit-html": "^2.0.2",
+    "prettier-plugin-sort-json": "^1.0.0",
     "puppeteer": "^10.0.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "sortablejs": "^1.14.0",
